--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.bootcamp</groupId>
     <artifactId>CommentaireRestServices</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -9,7 +8,6 @@
 
     <name>CommentaireRestServices</name>
     <url>http://maven.apache.org</url>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
@@ -26,14 +24,32 @@
 
         <dependency>
             <groupId>com.bootcamp</groupId>
+            <artifactId>commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.bootcamp</groupId>
             <artifactId>commons.ws</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.bootcamp</groupId>
+                    <artifactId>commons</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
             <groupId>com.bootcamp</groupId>
             <artifactId>service.crud</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.bootcamp</groupId>
+                    <artifactId>commons</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
@@ -155,8 +171,48 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <!-- en local -->
+        <profile>
+            <!--profil de production a publier-->
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources/local</directory>
+                    </resource>
+
+                </resources>
+            </build>
+        </profile>
+
+        <profile>
+            <!--profil de production a publier-->
+            <id>dev</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources/dev</directory>
+                    </resource>
+
+                </resources>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
-        <finalName>commentaireRestServices</finalName>
+        <finalName>commentaireServiceFonction</finalName>
         <plugins>
             <!-- Package as an executable jar/war -->
             <plugin>
@@ -164,15 +220,15 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>1.5.3.RELEASE</version>
                 <!--<configuration>-->
-                    <!--<mainClass>com.bootcamp.application.Application</mainClass>-->
-                    <!--<layout>ZIP</layout>-->
+                <!--<mainClass>com.bootcamp.application.Application</mainClass>-->
+                <!--<layout>ZIP</layout>-->
                 <!--</configuration>-->
                 <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<goals>-->
-                            <!--<goal>repackage</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
+                <!--<execution>-->
+                <!--<goals>-->
+                <!--<goal>repackage</goal>-->
+                <!--</goals>-->
+                <!--</execution>-->
                 <!--</executions>-->
             </plugin>
             <plugin>
