--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <groupId>com.bootcamp</groupId>
             <artifactId>commons</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -61,7 +67,14 @@
                 <exclusion>
                     <groupId>com.bootcamp</groupId>
                     <artifactId>commons</artifactId>
+
                 </exclusion>
+
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+
             </exclusions>
         </dependency>
 
